--- a/app/src/app/dashboard/dashboard.component.html
+++ b/app/src/app/dashboard/dashboard.component.html
@@ -7,10 +7,12 @@
   <span > Você não possui operações cadastradas </span>
 </div>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
+<table mat-table [dataSource]="dataSource" class="animate__bounce mat-elevation-z8 demo-table">
   <ng-container matColumnDef="asset">
     <th mat-header-cell *matHeaderCellDef>Ativo</th>
-    <td mat-cell *matCellDef="let element">{{ element.asset }}</td>
+    <td mat-cell *matCellDef="let element">
+      <img class="coin-img" [src]="getImage(element)" alt="">
+      {{ element.asset }}</td>
   </ng-container>
   <ng-container matColumnDef="currentPrice">
     <th mat-header-cell *matHeaderCellDef>Preço Atual</th>
